--- a/Sudharshan.html
+++ b/Sudharshan.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Sudharshan's profile</title>
+    <title>Sudharshan's profile Sudharshan</title>
 </head>
 <body>
     <h1>Hey Idiot change this to new page</h1>
