--- a/Sudharshan.html
+++ b/Sudharshan.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
-    <title>Sudharshan's profile Sudharshan</title>
+    <title>Sudharshan's profile </title>
 </head>
 <body>
-    <h1>Hey Idiot change this to new page</h1>
+    <h1>My New Web Page</h1>
     <div><img src="Profile.jpeg" alt="" width="1258" height="500" text-align: center/></div>
     
     <h1 style = "color: rgb(202, 38, 60); text-align: center;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Sudharshan G K</h1>
